refactor: Rename WY to LZH (#1)
* refactor: rename WY to lzh

* delete: lzh.arb

* rename: lzh -> LZH

* rename: lzh -> LZH in arb file

--- a/lib/l10n/intl_zh_Hant_LZH.arb
+++ b/lib/l10n/intl_zh_Hant_LZH.arb
@@ -1,5 +1,5 @@
 {
-  "@@locale": "zh_Hant_WY",
+  "@@locale": "zh_Hant_LZH",
   "rune": "符石聆音",
   "@rune": {
     "description": "The brand name of the software, which should not be translated."
