Minor change to JA i10n

--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -240,13 +240,13 @@
   "@amount": {},
   "mode": "形式",
   "@mode": {},
-  "recommendation": "おすすめ",
+  "recommendation": "薦",
   "@recommendation": {},
   "sortBy": "並び替え基準",
   "@sortBy": {},
   "sortOrder": "並び順",
   "@sortOrder": {},
-  "liked": "いいね",
+  "liked": "良",
   "@liked": {},
   "noRoamingCollection": "漫奏を開始できません。選集内の曲がまだ解析されていません。",
   "@noRoamingCollection": {},
