chore: Code cleanup

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -740,5 +740,9 @@
   "noLogsAvailable": "No logs available",
   "@noLogsAvailable": {
     "description": "The title of empty state icon in the logs settings page."
+  },
+  "home": "Home",
+  "@home": {
+    "description": "Title of a the home settings page."
   }
 }
