feat: Implement the interface of the library home setting

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -744,5 +744,21 @@
   "home": "Home",
   "@home": {
     "description": "Title of a the home settings page."
+  },
+  "newest": "Newest",
+  "@newest": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "oldest": "Oldest",
+  "@oldest": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "random": "Random",
+  "@random": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "mostPlayed": "Most Played",
+  "@mostPlayed": {
+    "description": "Title of an library home group."
   }
 }
