feat: Add context menu for the library home page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -760,5 +760,9 @@
   "mostPlayed": "Most Played",
   "@mostPlayed": {
     "description": "Title of an library home group."
+  },
+  "personalize": "Personalize",
+  "@personalize": {
+    "description": "Entry in the context menu of the library home page."
   }
 }
