Add translation for Home section
also minor bugfix

--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -220,7 +220,7 @@
   },
   "brandingAnimationSubtitle": "Rune 起動時に商標の動きを再生します。",
   "@brandingAnimationSubtitle": {},
-  "thisMightTakeAFewMinutes": "数分かかる場合があります。",
+  "thisMightTakeAFewMinutes": "この処理には数分かかることがあります。",
   "@thisMightTakeAFewMinutes": {
     "description": "Title on the scanning wait screen, reminding users to be patient."
   },
@@ -740,5 +740,25 @@
   "noLogsAvailable": "記録がありません",
   "@noLogsAvailable": {
     "description": "The title of empty state icon in the logs settings page."
+  }
+  "home": "主画面",
+  "@home": {
+    "description": "Title of a the home settings page."
+  },
+  "newest": "最新",
+  "@newest": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "oldest": "最古",
+  "@oldest": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "random": "お任せ",
+  "@random": {
+    "description": "An entry in the library home setting dropdown."
+  },
+  "mostPlayed": "再生数上位",
+  "@mostPlayed": {
+    "description": "Title of an library home group."
   }
 }
