feat: Integrating self painted title bar

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -796,5 +796,9 @@
   "exit": "Exit",
   "@exit": {
     "description": "Entry in the tray menu."
+  },
+  "back": "Back",
+  "@back": {
+    "description": "Tool tip for the top left icon of the Windows titlebar."
   }
 }
