--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -374,7 +374,7 @@
   "@oneDirectory": {
     "description": "Status text indicating one directory has been selected."
   },
-  "manyDirectories": "${count} Directories",
+  "manyDirectories": "{count} Directories",
   "@manyDirectories": {
     "description": "Status text indicating multiple directories have been selected.",
     "placeholders": {
@@ -425,19 +425,19 @@
   "@noRoamingCollection": {},
   "noRomaingTrack": "Unable to start roaming. This track hasn't been analyzed yet.",
   "@noRomaingTrack": {},
-  "noAnalysisScanning": "${baseMessage} The library is being scanned, so analysis cannot be performed.",
+  "noAnalysisScanning": "{baseMessage} The library is being scanned, so analysis cannot be performed.",
   "@noAnalysisScanning": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisAnalyzing": "${baseMessage} The library is being analyzed; please wait until the process is finished.",
+  "noAnalysisAnalyzing": "{baseMessage} The library is being analyzed; please wait until the process is finished.",
   "@noAnalysisAnalyzing": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisDefault": "${baseMessage} Please analyze your library for the best experience.",
+  "noAnalysisDefault": "{baseMessage} Please analyze your library for the best experience.",
   "@noAnalysisDefault": {
     "placeholders": {
       "baseMessage": {}
