--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -824,5 +824,25 @@
   "background": "Background",
   "@background": {
     "description": "Input field title of the cover art wall modal"
+  },
+  "evaluationMode": "Evaluation Mode",
+  "@evaluationMode": {
+    "description": "Title of the evaliation mode modal"
+  },
+  "evaluationModeContent1": "Rune is not a free software. We encourage you to purchase a genuine license from the app store.",
+  "@evaluationModeContent1": {
+    "description": "Content of the evaliation mode modal"
+  },
+  "evaluationModeContent2": "Licensed users benefit from automatic updates provided by the app store and have the privilege to propose new features directly to the developers.",
+  "@evaluationModeContent2": {
+    "description": "Content of the evaliation mode modal"
+  },
+  "evaluationModeContent3": "You can choose to dismiss this reminder for 180 days, and we will remind you again later.",
+  "@evaluationModeContent3": {
+    "description": "Content of the evaliation mode modal"
+  },
+  "remindMeLater": "Remind me later",
+  "@remindMeLater": {
+    "description": "Action button of the evaliation mode modal"
   }
 }
