chore: Improve lzh

--- a/lib/l10n/intl_zh_Hant_LZH.arb
+++ b/lib/l10n/intl_zh_Hant_LZH.arb
@@ -849,7 +849,7 @@
   "@mysteriousButton": {
     "description": "A context menu item"
   },
-  "mysteriousModalTitle": "蔽",
+  "mysteriousModalTitle": "幽",
   "@mysteriousModalTitle": {
     "description": "The title of a modal"
   },
