--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -401,7 +401,7 @@
   "@amount": {
     "description": "Prompt text in the modal indicating the number of tracks selected via slider or input box."
   },
-  "mode": "形式",
+  "mode": "再生順番",
   "@mode": {
     "description": "The playback mode for tracks."
   },
@@ -824,5 +824,41 @@
   "background": "背景",
   "@background": {
     "description": "Input field title of the cover art wall modal"
+   },
+  "evaluationMode": "試用期間",
+  "@evaluationMode": {
+    "description": "Title of the evaluation mode modal"
+  },
+  "evaluationModeContent1": "Rune はただで提供されるものではありません。正銘の許可を各商店からご購入いただくようお願いいたします。",
+  "@evaluationModeContent1": {
+    "description": "Content of the evaluation mode modal"
+  },
+  "evaluationModeContent2": "認証済み使用者は商店を通じて自動更新を受けることができ、さらに開発者に直接新機能の提案を行う特権があります。",
+  "@evaluationModeContent2": {
+    "description": "Content of the evaluation mode modal"
+  },
+  "evaluationModeContent3": "この通知を 180 日間非表示にすることができます。その後、再度お知らせします。
+  "@evaluationModeContent3": {
+    "description": "Content of the evaluation mode modal"
+  },
+  "remindMeLater": "後で思い出す",
+  "@remindMeLater": {
+    "description": "Action button of the evaluation mode modal"
+  },
+  "mysteriousButton": "謎の鍵",
+  "@mysteriousButton": {
+    "description": "A context menu item"
+  },
+  "mysteriousModalTitle": "きし",
+  "@mysteriousModalTitle": {
+    "description": "The title of a modal"
+  },
+  "mysteriousModalContent": 何やら不思議な仕掛けを作動させたようです。部屋の構造が変化し、新たに探索できる場所が現れたようです。",
+  "@mysteriousModalContent": {
+    "description": "The content of a modal"
+  },
+  "laboratory": "研究室",
+  "@laboratory": {
+    "description": "The title of a link title"
   }
 }
